--- a/index.html
+++ b/index.html
@@ -9,17 +9,97 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
        <div class="menu_side">
         <h1>Playlist</h1>
+        <div class="playlist">
+            <h4 class="active"><span></span><i class="fa-solid fa-music"></i>Playlist</h4>
+            <h4><span></span><i class="fa-solid fa-music"></i>Last listening</h4>
+            <h4><span></span><i class="fa-solid fa-music"></i>Recommended</h4>
+        </div>
+        <div class="menu_song">
+            <li class="songItem">
+                <span>01</span>
+                <img src="img/1.jpeg" alt="Kesariya">
+                <h5>Kesariya
+                    <div class="subtitle">
+                      Arijit Singh  
+                    </div>
+                    <i class="fa-sharp playListpay fa-solid fa-circle-play" id="1"></i>
+                </h5>
+            </li>          
+              
+            <li class="songItem">
+                <span>02</span>
+                <img src="img/1.jpeg" alt="Kesariya">
+                <h5>Kesariya
+                    <div class="subtitle">
+                      Arijit Singh  
+                    </div>
+                    <i class="fa-sharp playListpay fa-solid fa-circle-play" id="2"></i>
+                </h5>
+            </li>          
+            <li class="songItem">
+                <span>03</span>
+                <img src="img/1.jpeg" alt="Kesariya">
+                <h5>Kesariya
+                    <div class="subtitle">
+                      Arijit Singh  
+                    </div>
+                    <i class="fa-sharp playListpay fa-solid fa-circle-play" id="3"></i>
+                </h5>
+            </li>          
+            <li class="songItem">
+                <span>04</span>
+                <img src="img/1.jpeg" alt="Kesariya">
+                <h5>Kesariya
+                    <div class="subtitle">
+                      Arijit Singh  
+                    </div>
+                    <i class="fa-sharp playListpay fa-solid fa-circle-play" id="4"></i>
+                </h5>
+            </li>       
+            <li class="songItem">
+                <span>05</span>
+                <img src="img/1.jpeg" alt="Kesariya">
+                <h5>Kesariya
+                    <div class="subtitle">
+                      Arijit Singh  
+                    </div>
+                    <i class="fa-sharp playListpay fa-solid fa-circle-play" id="5"></i>
+                </h5>
+            </li>       
+            <li class="songItem">
+                <span>06</span>
+                <img src="img/1.jpeg" alt="Kesariya">
+                <h5>Kesariya
+                    <div class="subtitle">
+                      Arijit Singh  
+                    </div>
+                    <i class="fa-sharp playListpay fa-solid fa-circle-play" id="6"></i>
+                </h5>
+            </li>       
+        </div>
        </div>
        <div class="song_side">
         
        </div>
        <div class="master_play">
-
+            <div class="wave">
+                <div class="wave1"></div>
+                <div class="wave1"></div>
+                <div class="wave1"></div>
+            </div>
+            <img src="img/1.jpeg" alt="Kesariya">
+            <h5>Kesariya
+                <div class="subtitle">
+                  Arijit Singh  
+                </div>
+                <i class="fa-sharp playListpay fa-solid fa-circle-play" id="3"></i>
+            </h5>
        </div>
     </header>
     <script src="app.js"></script>
