--- a/index.html
+++ b/index.html
@@ -25,64 +25,64 @@
         <div class="menu_song">
             <li class="songItem">
                 <span>01</span>
-                <img src="img/1.jpeg" alt="Kesariya">
+                <img src="img/1.jpg" alt="Kesariya">
                 <h5>Kesariya
                     <div class="subtitle">
                       Arijit Singh  
                     </div>
                 </h5>
-                    <i class="fa-sharp playListpay fa-solid fa-circle-play" id="1"></i>
+                    <i class="fa-sharp playlistPlay fa-solid fa-circle-play" id="1"></i>
             </li>          
               
             <li class="songItem">
                 <span>02</span>
-                <img src="img/1.jpeg" alt="Kesariya">
+                <img src="img/1.jpg" alt="Kesariya">
                 <h5>Kesariya
                     <div class="subtitle">
                       Arijit Singh  
                     </div>
                 </h5>
-                    <i class="fa-sharp playListpay fa-solid fa-circle-play" id="2"></i>
+                    <i class="fa-sharp playlistPlay fa-solid fa-circle-play" id="2"></i>
             </li>          
             <li class="songItem">
                 <span>03</span>
-                <img src="img/1.jpeg" alt="Kesariya">
+                <img src="img/1.jpg" alt="Kesariya">
                 <h5>Kesariya
                     <div class="subtitle">
                       Arijit Singh  
                     </div>
                 </h5>
-                    <i class="fa-sharp playListpay fa-solid fa-circle-play" id="3"></i>
+                    <i class="fa-sharp playlistPlay fa-solid fa-circle-play" id="3"></i>
             </li>          
             <li class="songItem">
                 <span>04</span>
-                <img src="img/1.jpeg" alt="Kesariya">
+                <img src="img/1.jpg" alt="Kesariya">
                 <h5>Kesariya
                     <div class="subtitle">
                       Arijit Singh  
                     </div>
                 </h5>
-                    <i class="fa-sharp playListpay fa-solid fa-circle-play" id="4"></i>
+                    <i class="fa-sharp playlistPlay fa-solid fa-circle-play" id="4"></i>
             </li>       
             <li class="songItem">
                 <span>05</span>
-                <img src="img/1.jpeg" alt="Kesariya">
+                <img src="img/1.jpg" alt="Kesariya">
                 <h5>Kesariya
                     <div class="subtitle">
                       Arijit Singh  
                     </div>
                 </h5>
-                    <i class="fa-sharp playListpay fa-solid fa-circle-play" id="5"></i>
+                    <i class="fa-sharp playlistPlay fa-solid fa-circle-play" id="5"></i>
             </li>       
             <li class="songItem">
                 <span>06</span>
-                <img src="img/1.jpeg" alt="Kesariya">
+                <img src="img/1.jpg" alt="Kesariya">
                 <h5>Kesariya
                     <div class="subtitle">
                       Arijit Singh  
                     </div>
                 </h5>
-                    <i class="fa-sharp playListpay fa-solid fa-circle-play" id="6"></i>
+                    <i class="fa-sharp playlistPlay fa-solid fa-circle-play" id="6"></i>
             </li>       
         </div>
        </div>
@@ -121,7 +121,7 @@
             <div class="pop_song">
                 <li class="songItem">
                     <div class="img_play">
-                        <img src="img/1.jpeg" alt="Kesariya">
+                        <img src="img/1.jpg" alt="Kesariya">
                         <i class="bi playlistPlay bi-play-circle-fill" id="7"></i>
                     </div>
                     <h5>Kesariya
@@ -133,7 +133,7 @@
                 </li>
                 <li class="songItem">
                     <div class="img_play">
-                        <img src="img/1.jpeg" alt="Kesariya">
+                        <img src="img/1.jpg" alt="Kesariya">
                         <i class="bi playlistPlay bi-play-circle-fill" id="8"></i>
                     </div>
                     <h5>Kesariya
@@ -145,7 +145,7 @@
                 </li>
                 <li class="songItem">
                     <div class="img_play">
-                        <img src="img/1.jpeg" alt="Kesariya">
+                        <img src="img/1.jpg" alt="Kesariya">
                         <i class="bi playlistPlay bi-play-circle-fill" id="9"></i>
                     </div>
                     <h5>Kesariya
@@ -157,7 +157,7 @@
                 </li>
                 <li class="songItem">
                     <div class="img_play">
-                        <img src="img/1.jpeg" alt="Kesariya">
+                        <img src="img/1.jpg" alt="Kesariya">
                         <i class="bi playlistPlay bi-play-circle-fill" id="10"></i>
                     </div>
                     <h5>Kesariya
@@ -169,7 +169,7 @@
                 </li>
                 <li class="songItem">
                     <div class="img_play">
-                        <img src="img/1.jpeg" alt="Kesariya">
+                        <img src="img/1.jpg" alt="Kesariya">
                         <i class="bi playlistPlay bi-play-circle-fill" id="11"></i>
                     </div>
                     <h5>Kesariya
@@ -181,7 +181,7 @@
                 </li>
                 <li class="songItem">
                     <div class="img_play">
-                        <img src="img/1.jpeg" alt="Kesariya">
+                        <img src="img/1.jpg" alt="Kesariya">
                         <i class="bi playlistPlay bi-play-circle-fill" id="12"></i>
                     </div>
                     <h5>Kesariya
@@ -193,7 +193,7 @@
                 </li>
                 <li class="songItem">
                     <div class="img_play">
-                        <img src="img/1.jpeg" alt="Kesariya">
+                        <img src="img/1.jpg" alt="Kesariya">
                         <i class="bi playlistPlay bi-play-circle-fill" id="13"></i>
                     </div>
                     <h5>Kesariya
@@ -205,7 +205,7 @@
                 </li>
                 <li class="songItem">
                     <div class="img_play">
-                        <img src="img/1.jpeg" alt="Kesariya">
+                        <img src="img/1.jpg" alt="Kesariya">
                         <i class="bi playlistPlay bi-play-circle-fill" id="14"></i>
                     </div>
                     <h5>Kesariya
@@ -217,32 +217,8 @@
                 </li>
                 <li class="songItem">
                     <div class="img_play">
-                        <img src="img/1.jpeg" alt="Kesariya">
+                        <img src="img/1.jpg" alt="Kesariya">
                         <i class="bi playlistPlay bi-play-circle-fill" id="15"></i>
-                    </div>
-                    <h5>Kesariya
-                        <br>
-                        <div class="subtitle">
-                          Arijit Singh  
-                        </div>
-                    </h5>
-                </li>
-                <li class="songItem">
-                    <div class="img_play">
-                        <img src="img/1.jpeg" alt="Kesariya">
-                        <i class="bi playlistPlay bi-play-circle-fill" id="16"></i>
-                    </div>
-                    <h5>Kesariya
-                        <br>
-                        <div class="subtitle">
-                          Arijit Singh  
-                        </div>
-                    </h5>
-                </li>
-                <li class="songItem">
-                    <div class="img_play">
-                        <img src="img/1.jpeg" alt="Kesariya">
-                        <i class="bi playlistPlay bi-play-circle-fill" id="17"></i>
                     </div>
                     <h5>Kesariya
                         <br>
@@ -322,28 +298,29 @@
                 <div class="wave1"></div>
                 <div class="wave1"></div>
             </div>
-            <img src="img/1.jpeg" alt="Kesariya">
-            <h5>Kesariya
+            <img src="img/1.jpg" alt="Kesariya" id="poster_master_play">
+            <h5 id="title">Kesariya
                 <div class="subtitle">
                   Arijit Singh  
                 </div>
             </h5>
             <div class="icon">
-                <i class="bi bi-skip-start-fill"></i>
-                <i class="bi bi-play-fill"></i>
-                <i class="bi bi-skip-end-fill"></i>
+                <i class="bi bi-skip-start-fill" id="back"></i>
+                <i class="bi bi-play-fill" id="masterPlay"></i>
+                <i class="bi bi-skip-end-fill" id="next"></i>
+                <i class="bi bi-heart" id="heart"></i>
             </div>
-            <span id="currentStat">0:00</span>
+            <span id="currentStart">0:00</span>
             <div class="bar">
                 <input type="range" name="range" id="seek" min="0" value="0" max="100">
-                <div class="bar2" id=""></div>
-                <div class="dot"></div>
+                <div class="bar2" id="bar2"></div>
+                <div class="dot" id="dot"></div>
             </div>
             <span id="currentEnd">0:00</span>
             <div class="vol">
-                <i class="bi bi-volume-down-fill"></i>
+                <i class="bi bi-volume-down-fill" id="vol_icon"></i>
                 <input type="range" name="range" id="vol" min="0" value="0" max="100">
-                <div class="vol_bar" id=""></div>
+                <div class="vol_bar" id="vol_bar"></div>
                 <div class="dot" id="vol_dot"></div>
             </div>
 
